added page, perPage, totalPages
